Fixed Credit Card Margins on Billing + MM Spacing
-MM (Month) Placeholder was not showing whole font due to font change. Increased the size from 2 to 3.

--- a/app/styles/pages/_kitbuilder.scss
+++ b/app/styles/pages/_kitbuilder.scss
@@ -456,7 +456,8 @@ h4.billing-info {
     }
     span {
       @include p-ow-background();
-      font-family: $paragraph;      
+      font-family: $paragraph;   
+      margin-top: 18px;   
     }
     .credit-card-info {
     }
